--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,6 +43,11 @@
             "src": "images/touch/avatar.png",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "images/touch/avatar.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
